Bump grpcVersion from 1.49.1 to 1.49.2
Bumps `grpcVersion` from 1.49.1 to 1.49.2.

Updates `grpc-stub` from 1.49.1 to 1.49.2
- [Release notes](https://github.com/grpc/grpc-java/releases)
- [Commits](https://github.com/grpc/grpc-java/compare/v1.49.1...v1.49.2)

Updates `grpc-netty` from 1.49.1 to 1.49.2
- [Release notes](https://github.com/grpc/grpc-java/releases)
- [Commits](https://github.com/grpc/grpc-java/compare/v1.49.1...v1.49.2)

Updates `grpc-protobuf` from 1.49.1 to 1.49.2
- [Release notes](https://github.com/grpc/grpc-java/releases)
- [Commits](https://github.com/grpc/grpc-java/compare/v1.49.1...v1.49.2)

Updates `grpc-services` from 1.49.1 to 1.49.2
- [Release notes](https://github.com/grpc/grpc-java/releases)
- [Commits](https://github.com/grpc/grpc-java/compare/v1.49.1...v1.49.2)

Updates `protoc-gen-grpc-java` from 1.49.1 to 1.49.2
- [Release notes](https://github.com/grpc/grpc-java/releases)
- [Commits](https://github.com/grpc/grpc-java/compare/v1.49.1...v1.49.2)

---
updated-dependencies:
- dependency-name: io.grpc:grpc-stub
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: io.grpc:grpc-netty
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: io.grpc:grpc-protobuf
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: io.grpc:grpc-services
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: io.grpc:protoc-gen-grpc-java
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>